Closed Bug 1754054 Opened 3 years ago Closed 3 years ago

RDLUtils::AssertFrameSubtreeUnmodified is called also in optimized builds

Categories

(Core :: Web Painting, defect)

defect

Tracking

()

RESOLVED FIXED
99 Branch
Tracking Status
firefox99 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file)

Assignee: nobody → bugs
Status: NEW → ASSIGNED
Attachment #9262731 - Attachment description: Bug 1754054, don't useless iterate the frametree on an optimized build, r=miko → Bug 1754054, don't uselessly iterate the frametree on an optimized build, r=miko
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c0b794f6c50a don't uselessly iterate the frametree on an optimized build, r=miko
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Depends on: 1772561
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: