Bug 1754054, don't uselessly iterate the frametree on an optimized build, r=miko

Differential Revision: https://phabricator.services.mozilla.com/D138064